<resources>
    <string name="app_name">CLAN</string>
    <string name="firstname_hint">First Name</string>
    <string name="lastname_hint">Last Name</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone</string>
    <string name="refferalcode_hint">Refferal Code</string>

    <string name="title_activity_main">Clan Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_event">Event</string>
    <string name="tab_text_1">Description</string>
    <string name="tab_text_2">Content</string>
    <string name="tab_text_3">Challenge</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
